# OriginNSFit

./: .gitignore  OriginNSFit.spec  README.md  pyproject.toml
docs/: originpro_plotting_manual.md  user_manual.md
examples/: e739_example.csv
offline/: README.md  install_offline.ps1
scripts/: run_originnsfit.py  verify_threshold_log_mle.py
src/originnsfit/: __init__.py  cli.py  data_loader.py  e739.py  fitting.py  origin_client.py
